get lastest mongodb driver
//FIX: stack overflow (on deep callback) (cred: https://github.com/limp/node-mongodb-native/commit/27da7e4b2af02035847f262b29837a94bbbf6ce2)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "main": "index",
   "dependencies": {
     "validation": "*",
-    "mongodb": "1.0.2",
+    "mongodb": "*",
     "request": "2.x.x",
     "commander": "1.0.x",
     "cookies": ">= 0.3.0",
